Fixes purchase links' spacing. Closes issue #202.

--- a/less/app.less
+++ b/less/app.less
@@ -660,7 +660,6 @@ h1 + #story-meta { margin-top: -11px; }
 .book-modal-links {
 
 	>a {
-		line-height: .5em;
 		color: @red;
 		font-weight: bold;
 		font-size: 14px;
@@ -677,7 +676,8 @@ h1 + #story-meta { margin-top: -11px; }
 		padding: 8px 8px 8px 25px;
 		text-align: right;
 		margin: 4px 2px 4px 2px;
-		line-height: 5em;
+		line-height: 3.5em;
+
 	}
 
 	>a:hover {
